# galleon

./: .gitignore  CMakeLists.txt  README.md  build-msys2.sh  imgui.ini
src/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  interface.cpp  interface.h  main.cpp  video_events.c  video_events.cpp  video_player.c  video_player.h
src/imgui_impl/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
src/interface/: input_panel.cpp  interface.cpp  interface.h  media_controls.cpp  torrent_info.cpp
src/torrent/: torrent_events.cpp  torrent_handler.cpp  torrent_handler.h
src/video/: video_events.cpp  video_player.cpp  video_player.h
